--- a/css/game.css
+++ b/css/game.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 
 * {
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: black;
+    user-select: none;
 }
 
 .container {
@@ -49,6 +52,135 @@
     height: fit-content;
     z-index: 100;
     opacity: 0;
+}
+
+#menu-modal, #selection-modal {
+    position: absolute;
+    background-color: transparent;
+    width: 61rem;
+    height: 51rem;
+    z-index: 100;
+    background-image: url("/assets/ui/menu_modal.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 100%;
+}
+
+#menu-modal div {
+    color: white;
+    background-color: transparent;
+    text-align: center;
+    margin: 0 2.75rem;
+    padding: 1rem 0;
+    font-size: 2rem;
+    font-family: 'Press Start 2P', cursive;
+}
+
+#menu-modal div:hover {
+    background-color: rgb(254, 31, 136);
+    cursor: pointer;
+}
+
+#selection-modal {
+    align-items: center;
+    opacity: 0;
+}
+
+#selection-modal .title {
+    width: 100%;
+    text-align: center;
+    background-color: transparent;
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.image-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    width: 35rem;
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+}
+
+.image-container img {
+    aspect-ratio: 92/140;
+    width: 50rem;
+}
+
+#arrow-left {
+    font-size: 2rem;
+    font-family: 'Press Start 2P', cursive;
+    width: 20rem;
+    animation: arrowMoveLeft 0.5s steps(2) infinite;
+    cursor: pointer;
+}
+
+#arrow-right {
+    font-size: 2rem;
+    font-family: 'Press Start 2P', cursive;
+    width: 20rem;
+    animation: arrowMoveRight 0.5s steps(2) infinite;
+    cursor: pointer;
+}
+
+
+@keyframes arrowMoveLeft {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-10%);
+    }
+}
+
+@keyframes arrowMoveRight {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(10%);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+
+#selection-modal button {
+    width: 91%;
+    text-align: center;
+    background-color: transparent;
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border: none;
+}
+
+#selection-modal button:nth-child(3) {
+    margin-top: 2rem;
+}
+
+#selection-modal button:hover {
+    background-color: rgb(254, 31, 136);
+    cursor: pointer;
 }
 
 #opening-screen {
