feat: front page

--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -62,6 +62,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 .container .ui #menu-modal > div {
   color: white;
