feat: front page features

--- a/scss/game/index.css
+++ b/scss/game/index.css
@@ -19,19 +19,6 @@ body {
   border-radius: 0.5rem;
 }
 
-#light {
-  --x: 50%;
-  --y: 50%;
-  top: 50%;
-  left: 50%;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  position: absolute;
-  background-color: rgba(231, 221, 122, 0.5);
-  -webkit-mask: radial-gradient(white 15%, transparent 16%) 10rem 10rem/30px 30px repeat;
-}
-
 .navbar {
   display: flex;
   flex-direction: row;
@@ -40,7 +27,7 @@ body {
   width: 100vw;
   height: 5rem;
   position: fixed;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.9);
   z-index: 100;
 }
 .navbar .navbar-container {
@@ -151,6 +138,49 @@ body {
   border-bottom: 0.2rem solid white;
 }
 .about-container .about-content .about-text-container > p {
+  font-family: "Kanit", sans-serif;
+  font-weight: lighter;
+  letter-spacing: 0.1rem;
+  font-size: 1.1rem;
+  text-align: start;
+  color: white;
+}
+
+.features-container {
+  width: 100vw;
+  overflow: hidden;
+  position: relative;
+}
+.features-container .image-cover {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 57vw;
+  width: 100vw;
+  box-shadow: 0 0 1rem 1rem inset;
+}
+.features-container > img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transform: scale(1.5) translateX(10%);
+}
+.features-container .features-text-container {
+  position: absolute;
+  top: 25%;
+  left: 20%;
+  width: 25%;
+  font-family: "Kanit", sans-serif;
+  color: white;
+}
+.features-container .features-text-container > h1 {
+  font-family: "Kanit", sans-serif;
+  color: white;
+  padding-bottom: 0.2rem;
+  border-bottom: 0.2rem solid white;
+}
+.features-container .features-text-container > p {
   font-family: "Kanit", sans-serif;
   font-weight: lighter;
   letter-spacing: 0.1rem;
